# OTUS_Cpp_basics

./: README.md  hello_world
05.hw/: CMakeLists.txt
05.hw/include/: IStatistics.h  Max.h  Mean.h  Min.h  Std.h
05.hw/src/: Max.cpp  Mean.cpp  Min.cpp  Std.cpp  statistics_main.cpp
3.homework/: CMakeLists.txt  function.h
3.hw/: 3.homework.cpp  function.cpp
4.hw/: CMakeLists.txt
4.hw/include/: astnode.hpp  lexer.hpp
4.hw/src/: astnode.cpp  lexer.cpp  main.cpp  parser.cpp
5.hw/src/: statistics_main.cpp
6.hw/: CMakeLists.txt
6.hw/include/: functions.h  listContainer.h  vectorContainer.h
6.hw/src/: main.cpp
7.hw/: CMakeLists.txt
7.hw/include/: listContainer.h  vectorContainer.h
7.hw/test/: test_list.cpp  test_vector.cpp
8.hw/: CMakeLists.txt  topk_words.cpp  topk_words_my.cpp
